@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline

skinparam classAttributeIconSize 0

'left to right direction

class GenerateTeam {
    - int minSize
    - int maxSize

    + GenerateTeam(minSize, maxSize, skill)

}

class Skill {
    - String name
    + Skill (name)

}

class SkillsRepository {
    + getSkillsList()
}

class GenerateTeamRepository {
    + generateTeam(minSize, maxSize, skill)
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getSkillRepository()
    + getGenerateTeamRepository()
}


class HRM {
    - name
}

class GenerateTeamController {
    + GenerateTeamController()
    + getSkillsList()
    + generateTeam(minSize, maxSize, skill)
}

class GenerateTeamUI {
}

GenerateTeamUI ..> GenerateTeamController
GenerateTeamController ..> Repositories
GenerateTeamController ..> GenerateTeamRepository
GenerateTeamController ..> SkillsRepository
Repositories --> GenerateTeamRepository
Repositories --> SkillsRepository
HRM --> GenerateTeam
HRM --> Skill
GenerateTeamRepository --> GenerateTeam
SkillsRepository --> Skill
GenerateTeam --> Skill



@enduml